# nails

./: Cargo.toml  rust-toolchain
app/: Cargo.toml  lib.rs  main.rs  routes.rs
lib/contextful/: Cargo.toml
lib/contextful/src/: lib.rs
lib/nails/: Cargo.toml
lib/nails/src/: __rt.rs  error.rs  lib.rs  request.rs  response.rs  routing.rs  service.rs  utils.rs
lib/nails/src/utils/: hyper_ext.rs  tokio02_ext.rs
lib/nails_derive/: Cargo.toml
lib/nails_derive/src/: attrs.rs  lib.rs  path.rs  test_utils.rs  utils.rs
lib/nails_derive/tests/: ui.rs
lib/nails_derive/tests/ui/: from-request-double-paths.rs  from-request-double-paths.stderr  from-request-double-queries.rs  from-request-double-queries.stderr  from-request-duplicate-path-names.rs  from-request-duplicate-path-names.stderr  from-request-enum.rs  from-request-enum.stderr  from-request-missing-path-names.rs  from-request-missing-path-names.stderr  from-request-missing-path.rs  from-request-missing-path.stderr  from-request-missing-query-attr.rs  from-request-missing-query-attr.stderr  from-request-non-captured-path-name.rs  from-request-non-captured-path-name.stderr  from-request-non-string-paths.rs  from-request-non-string-paths.stderr  from-request-non-string-queries.rs  from-request-non-string-queries.stderr  from-request-position-field-missing-kinds.rs  from-request-position-field-missing-kinds.stderr  from-request-position-field-queries.rs  from-request-position-field-queries.stderr  from-request-unknown-attr.rs  from-request-unknown-attr.stderr
project-examples/realworld/: .env.sample  .gitattributes  Cargo.toml  diesel.toml
project-examples/realworld/app/: context.rs  main.rs  models.rs  routes.rs  schema.rs  tokens.rs
project-examples/realworld/app/routes/: articles.rs  posts.rs  tags.rs  users.rs
project-examples/realworld/migrations/2019-07-28-121610_create_db/: down.sql  up.sql
src/: main.rs
