[package]
name = "nails"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
futures-preview = { version = "=0.3.0-alpha.17", features = ["io-compat"] }
hyper = { version = "0.12.30", default-features = false }
nails_derive = { path = "../nails_derive" }
