[package]
name = "nails"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
futures01 = "0.1.28"
futures-preview = { version = "=0.3.0-alpha.18", features = ["io-compat"] }
hyper = { version = "0.12.30", default-features = false }
runtime = "=0.3.0-alpha.7"
async-trait = "0.1.6"
contextful = { path = "../contextful" }
nails_derive = { path = "../nails_derive" }
