[package]
name = "nails"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
futures01 = "0.1.28"
futures-preview = { version = "=0.3.0-alpha.18", features = ["io-compat"] }
tokio-io = "=0.2.0-alpha.4"
tokio-executor = "=0.2.0-alpha.4"
hyper = { version = "=0.13.0-alpha.1", default-features = false }
runtime = "=0.3.0-alpha.7"
async-trait = "0.1.13"
contextful = { path = "../contextful" }
nails_derive = { path = "../nails_derive" }
