[package]
name = "nails_derive"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

[dependencies]
quote = "1.0.2"
syn = "1.0.4"
synstructure = "0.12.0"
proc-macro2 = "1.0.1"

[dev-dependencies]
trybuild = "1.0.11"

[features]
proc_macro_diagnostics = []

[lib]
proc-macro = true
