[package]
name = "nails-realworld"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.14.1"
failure = "0.1.5"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
futures-preview = { version = "=0.3.0-alpha.18", features = ["io-compat"] }
hyper = { version = "0.12.33", default-features = false }
runtime = "=0.3.0-alpha.7"
structopt = "0.2.16"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
nails = { path = "../../lib/nails" }
contextful = { path = "../../lib/contextful" }

[[bin]]
name = "realworld"
path = "app/main.rs"
