[package]
name = "nails-realworld"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.14.1"
failure = "0.1.5"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
futures-preview = { version = "=0.3.0-alpha.18", features = ["io-compat"] }
hyper = { version = "=0.13.0-alpha.1", default-features = false }
runtime = "=0.3.0-alpha.7"
structopt = "0.3.2"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
nails = { path = "../../lib/nails" }
contextful = { path = "../../lib/contextful" }

[dev-dependencies]
surf = "1.0.2"

[[bin]]
name = "realworld"
path = "app/main.rs"
